ready for deployd

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <div class="wrapp">
 
-        <div class="main_header">Main header</div>
+        <div class="main_header">Challenge For Dynamic web</div>
 
         <div class="container">
             <div class="raw">
